k8s/ingress/gcp/debugpilot-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: debugpilot-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    external-dns.alpha.kubernetes.io/hostname: debugpilot-gcp.manavmalavia.org
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - debugpilot-gcp.manavmalavia.org
      secretName: debugpilot-gcp-tls
  rules:
    - host: debugpilot-gcp.manavmalavia.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: debugpilot-api
                port:
                  number: 8000
