k8s/ingress/gcp/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    external-dns.alpha.kubernetes.io/hostname: debugpilot-gcp-grafana.manavmalavia.org
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "false"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - debugpilot-gcp-grafana.manavmalavia.org
      secretName: debugpilot-gcp-grafana-tls
  rules:
    - host: debugpilot-gcp-grafana.manavmalavia.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: monitoring-grafana
                port:
                  number: 80
